# lilyparts

./: .gitignore  LICENSE  README.md  calc.ly  einzelstimmen.pl  gitarrenstaff.ly  head.ly  install.sh  lilyparts  lilysplit  paper.ly  pyproject.toml  score.ly  stimmen.ly  uninstall.sh
demo/: head_functions.ly  ossiatest.ly  perctest.ly
doc/demo/: demo.ly  divimarks.ly  head_functions.ly  ossiatest.ly  perctest.ly  spans.ly  test-helper.ly
doc/output/: demo.midi  divimarks.midi  head_functions.midi  ossiatest.midi  perctest.midi  spans.midi
gomp/: bass_in_guitar.ly  calc.ly  divisi.ly  head.ly  paper.ly  percussion_helpers.ly  rhythm.ly  score.ly  solo.ly  spans.ly  stimmen.ly  straight.ly
lilysplit/: __init__.py  __main__.py  compiler.py  main.py  midicompiler.py  pdfcompiler.py  song.py  voicecompiler.py
lilysplit/lib/lilyparts/: attacca.ly  bass_in_guitar.ly  calc.ly  chords.ly  divisi.ly  head.ly  paper.ly  percussion_helpers.ly  rhythm.ly  score.ly  solo.ly  spans.ly  split.ly  stimmen.ly  straight.ly
